Changelog for ghcid

    #57, support wrappers that access stdin first (e.g. stack)
    #67, make --reload/--restart recurse through directories
    #61, deal with drive letters in files (for stack on Windows)
    #58, improve the --help message
0.6.1
    Add --reload to add files that reload, but do not restart
    #56, allow --restart to take directories
0.6
    #38, implement loading with stack
    Add process, quit and execStream to the API
    #29, add interrupt function
    Add Data instances for the types
    Make stopGhci more effective, now kills the underlying process
    Make startGhci take a function to write the buffer to
0.5.1
    #17, deal with recursive modules errors properly
    #50, use -fno-code when not running tests (about twice as fast)
    #44, abbreviate the redundant module import error
    #45, add an extra space before the ... message
    #42, always show the first error in full
    #43, work even if people use break-on-exception flags
    #42, make the first error a minimum of 5 lines
0.5
    Add an extra boolean argument to startGhci
    Add the number of modules loaded after All good
    Print out messages until the prompt comes up
    #23, add arguments and change what commands get invoked
    #35, change the titlebar icon on Windows
0.4.2
    Fix a GHC 7.6 warning
0.4.1
    #37, add a --notitle flag
    Require extra-1.2
0.4
    #33, make Ctrl-C more robust
    #31, add an outputfile feature
    #32, make newer warnings first (save a file, view its warnings)
    #28, fix issues on VIM file saves
    #29, support running a quick test on each save
    Add a --directory flag to change directory first
    #26, use fs-notify to avoid excessive wakeups
    #25, detect console size just before using it
0.3.6
    #24, don't error out if error/putStrLn are not imported
0.3.5
    #19, put errors in bold
    #9, display interesting information in the title bar
    #7, reload if the .ghci or .cabal file changes
    Use nubOrd